--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node lib/server",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
     "test": "jest",
     "lint": "eslint src/. --ext ts --ext tsx --ext js",
@@ -17,16 +19,23 @@
     "doc": "tsc && jsdoc -c ./.jsdoc.json"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "ethers": "^5.1.4",
+    "express": "^4.17.1",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
-    "husky": "^4.3.8",
-    "ts-jest": "^26.4.4",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jsdoc": "^3.6.6",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
