--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "outDir": "./lib",
     "allowJs": true,
-    "target": "es5"
+    "target": "es5",
+    "esModuleInterop": true,
   },
   "include": ["./src"],
   "exclude": ["./node_modules"]
