--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "target": "es5",
     "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["./src"],
   "exclude": ["./node_modules"]
